// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drop Down Menu should render with menu 1`] = `
<styled.ul
  showDropDown={true}
>
  <li>
    <Styled(Link)
      to="/"
    >
      Home
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/calendar"
    >
      Calendar
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/articles"
    >
      Messages
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/slideshow"
    >
      Pictures
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/about"
    >
      Our Mission
    </Styled(Link)>
  </li>
</styled.ul>
`;

exports[`Drop Down Menu should render without menu 1`] = `
<styled.ul
  showDropDown={false}
>
  <li>
    <Styled(Link)
      to="/"
    >
      Home
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/calendar"
    >
      Calendar
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/articles"
    >
      Messages
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/slideshow"
    >
      Pictures
    </Styled(Link)>
  </li>
  <li>
    <Styled(Link)
      to="/about"
    >
      Our Mission
    </Styled(Link)>
  </li>
</styled.ul>
`;
